# acurite-sensor-pi

./: CMakeLists.txt  README.md
AcuriteSensor/: CMakeLists.txt
